--- a/src/main/resources/templates/User/V3/Notification.html
+++ b/src/main/resources/templates/User/V3/Notification.html
@@ -45,12 +45,12 @@
         <div class="sidebar-content js-simplebar">
           <a class="sidebar-brand" href="index.html">
             <img
-              alt="Logo"
-              class="rounded-circle me-3"
-              height="50"
-              id="logo"
-              src="/img/icons/logo2.jpg"
-              width="50"
+                    alt="Logo"
+                    class="rounded-circle me-3"
+                    height="50"
+                    id="logo"
+                    src="/static/img/icons/logo2.jpg"
+                    width="50"
             />
             <span class="align-middle">Dreamers</span>
           </a>
@@ -66,39 +66,23 @@
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/profile.html">
+              <a class="sidebar-link" href="/user-profile">
                 <i class="align-middle" data-feather="user"></i>
                 <span class="align-middle">Profile</span>
               </a>
             </li>
+
             <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/resume_.html">
+              <a class="sidebar-link" href="/user-resume">
                 <i class="align-middle" data-feather="clipboard"></i>
                 <span class="align-middle">Resume</span>
               </a>
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/calender.html">
-                <i class="align-middle" data-feather="calendar"></i>
-                <span class="align-middle">Calender</span>
-              </a>
-            </li>
-
-            <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/apply.html">
+              <a class="sidebar-link" href="/user-applied">
                 <i class="align-middle" data-feather="check-square"></i>
                 <span class="align-middle">Applied job</span>
-              </a>
-            </li>
-
-            <li class="sidebar-item">
-              <a
-                class="sidebar-link"
-                href="/User/V3/EmployersViewPage.html"
-              >
-                <i class="align-middle" data-feather="users"></i>
-                <span class="align-middle">Recruiter follow</span>
               </a>
             </li>
 
