--- a/src/main/resources/templates/User/V3/dashboard.html
+++ b/src/main/resources/templates/User/V3/dashboard.html
@@ -42,14 +42,14 @@
       <!-- sidebar -->
       <nav id="sidebar" class="sidebar js-sidebar">
         <div class="sidebar-content js-simplebar">
-          <a class="sidebar-brand" href="index.html">
+          <a class="sidebar-brand" href="http://localhost:8080">
             <img
-              alt="Logo"
-              class="rounded-circle me-3"
-              height="50"
-              id="logo"
-              src="/img/icons/logo2.jpg"
-              width="50"
+                    alt="Logo"
+                    class="rounded-circle me-3"
+                    height="50"
+                    id="logo"
+                    src="/img/icons/logo2.jpg"
+                    width="50"
             />
             <span class="align-middle">Dreamers</span>
           </a>
@@ -57,68 +57,52 @@
           <ul class="sidebar-nav">
             <li class="sidebar-header">Pages</li>
 
-            <li class="sidebar-item active">
-              <a class="sidebar-link" href="/User/V3/dashboard.html">
+            <li class="sidebar-item ">
+              <a class="sidebar-link" href="/users/dashboard">
                 <i class="align-middle" data-feather="sliders"></i>
                 <span class="align-middle">Dashboard</span>
               </a>
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/profile.html">
+              <a class="sidebar-link" href="/user-profile">
                 <i class="align-middle" data-feather="user"></i>
-                <span class="align-middle">Profile</span>
+                <span class="align-middle">Thông tin cá nhân</span>
               </a>
             </li>
+
             <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/resume_.html">
+              <a class="sidebar-link" href="/user-resume">
                 <i class="align-middle" data-feather="clipboard"></i>
-                <span class="align-middle">Resume</span>
+                <span class="align-middle">Hồ sơ ứng tuyển</span>
               </a>
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/calender.html">
-                <i class="align-middle" data-feather="calendar"></i>
-                <span class="align-middle">Calender</span>
-              </a>
-            </li>
-
-            <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/apply.html">
+              <a class="sidebar-link" href="/user-applied">
                 <i class="align-middle" data-feather="check-square"></i>
-                <span class="align-middle">Applied job</span>
+                <span class="align-middle">Danh sách bài đăng</span>
               </a>
             </li>
 
             <li class="sidebar-item">
-              <a
-                class="sidebar-link"
-                href="/User/V3/EmployersViewPage.html"
-              >
-                <i class="align-middle" data-feather="users"></i>
-                <span class="align-middle">Recruiter follow</span>
-              </a>
-            </li>
-
-            <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/saved_jobs.html">
+              <a class="sidebar-link" href="#">
                 <i class="align-middle" data-feather="bookmark"></i>
-                <span class="align-middle">Bookmarks</span>
+                <span class="align-middle">Bài viết đã lưu</span>
               </a>
             </li>
 
             <li class="sidebar-item">
               <a class="sidebar-link" href="#">
                 <i class="align-middle" data-feather="message-square"></i>
-                <span class="align-middle">Messages</span>
+                <span class="align-middle">Tin nhắn</span>
               </a>
             </li>
 
             <li class="sidebar-item">
-              <a class="sidebar-link" href="/User/V3/Notification.html">
+              <a class="sidebar-link" href="#">
                 <i class="align-middle" data-feather="bell"></i>
-                <span class="align-middle">Notifications</span>
+                <span class="align-middle">Thông báo</span>
               </a>
             </li>
           </ul>
